L12 disable pdf output

--- a/lectures/L12/index.qmd
+++ b/lectures/L12/index.qmd
@@ -7,8 +7,8 @@ format:
   html: {}
   revealjs:
     output-file: slides.html
-  pdf:
-    output-file: L12.pdf
+  <!-- pdf: -->
+    <!-- output-file: L12.pdf -->
 ---
 
 ::: {.content-visible when-format="html" unless-format="revealjs"}
